--- a/S3/s3.yaml
+++ b/S3/s3.yaml
@@ -29,12 +29,12 @@ Resources:
     Type: 'AWS::EC2::VPCEndpoint'
     Properties:
       VpcId:
-        Fn::ImportValue: !Sub ${Environment}-Vpc-VpcId
+        Fn::ImportValue: !Sub ${Environment}-VpcFunc-VpcId
       ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
       RouteTableIds:
-        - Fn::ImportValue: !Sub ${Environment}-Vpc-PrivateSubnet1RouteTableId
-        - Fn::ImportValue: !Sub ${Environment}-Vpc-PrivateSubnet2RouteTableId
-        - Fn::ImportValue: !Sub ${Environment}-Vpc-PublicSubnetRouteTableId
+        - Fn::ImportValue: !Sub ${Environment}-VpcFunc-PrivateSubnet1RouteTableId
+        - Fn::ImportValue: !Sub ${Environment}-VpcFunc-PrivateSubnet2RouteTableId
+        - Fn::ImportValue: !Sub ${Environment}-VpcFunc-PublicSubnetRouteTableId
       PolicyDocument:
         Version: 2012-10-17
         Statement:
