--- a/Instances/docker_dev_instance.yaml
+++ b/Instances/docker_dev_instance.yaml
@@ -79,8 +79,8 @@ Resources:
               - ":3128\" \"NO_PROXY=localhost,127.0.0.1,.dkr.ecr.${AWS::Region}.amazonaws.com\"\n"
               - !Sub |
                 EOL
-                sudo systemctl start docker.service
-                sudo systemctl enable docker.service
+                sudo systemctl start docker
+                sudo systemctl enable docker
                 sudo usermod -a -G docker ec2-user
                 # Setup AWS CLI
                 aws configure set region ${AWS::Region}
