--- a/IAM/iam.yaml
+++ b/IAM/iam.yaml
@@ -151,6 +151,10 @@ Resources:
               - sts:AssumeRole
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
+        #For EKS
+        - arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy
+        - arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy
+        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
   EksWorkerNodeInstanceRolePlofile:
     Type: AWS::IAM::InstanceProfile
     Properties:
